welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:3: error: value lenght is not a member of Array[Int]
  for (c<- 0 to nums.lenght-1){
                     ^