welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
  var nb : Int=0
  for (c<- 0 to nums.lenght-1){
    if (nums(c)==9){
      nb=nb+1
    }
    return nb
  }
}